--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     />
+    <!-- In index.html -->
+<link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+
     <title>PanacheBySoh</title>
   </head>
   <body>
